Validando controller, generando documentacion de endpoint proponerCombinacion
